syntax = "proto3";
package project;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";
import "project/project.proto";

option go_package = "github.com/ixofoundation/ixo-blockchain/x/project/types";

service Query {
  rpc ProjectDoc(QueryProjectDocRequest) returns (QueryProjectDocResponse){
    option (google.api.http).get = "/ixo/project/{project_did}"; //this is a REST endpoint - see Query service here https://docs.cosmos.network/master/migrations/app_and_modules.html
  }

  rpc ProjectAccounts(QueryProjectAccountsRequest) returns (QueryProjectAccountsResponse){
    option (google.api.http).get = "/ixo/projectAccounts/{project_did}"; //this is a REST endpoint - see Query service here https://docs.cosmos.network/master/migrations/app_and_modules.html
  }

  rpc ProjectTx(QueryProjectTxRequest) returns (QueryProjectTxResponse){
    option (google.api.http).get = "/ixo/projectTxs/{project_did}"; //this is a REST endpoint - see Query service here https://docs.cosmos.network/master/migrations/app_and_modules.html
  }

  rpc Params(QueryParamsRequest) returns (QueryParamsResponse){
    option (google.api.http).get = "/ixo/projectParams"; //this is a REST endpoint - see Query service here https://docs.cosmos.network/master/migrations/app_and_modules.html
  }
}

message QueryProjectDocRequest {
  string project_did = 1 [(gogoproto.moretags) = "yaml:\"project_did\""];
}

message QueryProjectDocResponse {
  ProjectDoc project_doc = 1 [(gogoproto.moretags) = "yaml:\"project_doc\""];
}

message QueryProjectAccountsRequest {
  string project_did = 1 [(gogoproto.moretags) = "yaml:\"project_did\""];
}

message QueryProjectAccountsResponse {
  AccountMap account_map = 1 [(gogoproto.moretags) = "yaml:\"account_map\""];
}

message QueryProjectTxRequest {
  string project_did = 1 [(gogoproto.moretags) = "yaml:\"project_did\""];
}

message QueryProjectTxResponse {
  WithdrawalInfoDocs txs = 1 [(gogoproto.moretags) = "yaml:\"txs\""];
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"params\""];
}

